--- a/diff-color2.user.css
+++ b/diff-color2.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
-@name        WM diff color2 
+@name        WM diff color2 (yellow/blue)
 @namespace   StylishThemes
-@version     1.1.8
+@version     1.1.9
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color2.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color2.user.css
 @license     CC-BY-SA-4.0
