--- a/diff-color.user.css
+++ b/diff-color.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        WM diff color (red/green)
 @namespace   StylishThemes
-@version     1.1.12
+@version     1.1.13
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color.user.css
 @license     CC-BY-SA-4.0
@@ -88,6 +88,21 @@ html.skin-theme-clientpref-night del.popupDiff {
   html.skin-theme-clientpref-os del.popupDiff {
     background: #9f3526; /* default: #89474b */
   }
+}
+
+/* Visual diff fixes */
+/* Light mode */
+[data-diff-action="insert"],
+.ve-ui-diffElement-attributeChange ins {
+  background-color: var(--background-color-content-added) !important;
+}
+[data-diff-action="remove"],
+.ve-ui-diffElement-attributeChange del {
+  background-color: var(--background-color-content-removed) !important;
+}
+[data-diff-action="change"], 
+[data-diff-action="change-insert"] {
+  background-color: var(--background-color-content-changed) !important;
 }
 
 /* Visualdiff clarifier */
