--- a/diff-color.user.css
+++ b/diff-color.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        WM diff color (red/green)
 @namespace   StylishThemes
-@version     1.1.13
+@version     1.1.14
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color.user.css
 @license     CC-BY-SA-4.0
@@ -133,6 +133,31 @@ html.skin-theme-clientpref-night .ve-ui-diffElement-attributeChange del {
   html.skin-theme-clientpref-os .ve-ui-diffElement-attributeChange del {
     background: #9f3526; /* default: #89474b */
   }
+}
+
+/* More tweaks - notes from Derek */
+.mw-diff-inline-deleted del, .mw-diff-inline-changed del, .mw-diff-inline-moved del { 
+	  text-decoration: line-through;
+}
+
+.mw-diff-inline-added ins, .mw-diff-inline-changed ins, .mw-diff-inline-moved ins {
+  font-weight: bold;
+  margin-left: 2px;
+}
+
+[data-diff-action='change'], [data-diff-action='change-insert'] {
+  background-color: var(--background-color-content-changed) !important;
+  box-shadow: 0 0 0 1px var(--border-color-content-changed);
+}
+
+[data-diff-action='insert'], [data-diff-action='insert'] > caption, [data-diff-action='insert'] > figcaption {
+  background-color: var(--background-color-content-added) !important;
+  box-shadow: 0 0 0 1px var(--border-color-content-added);
+}
+
+[data-diff-action='remove'], [data-diff-action='remove'] > caption, [data-diff-action='remove'] > figcaption {
+  background-color: var(--background-color-content-removed) !important;
+  box-shadow: 0 0 0 1px var(--border-color-content-removed);
 }
 
 
