--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.71
+@version     1.1.72
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/quiddity.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -201,13 +201,13 @@ body.mw-special-PageTranslation #mw-content-text li > div::after {
 .mw-pt-progress:after {
   opacity: 0.6;
 }
-/* Tweak background color of "New Translations" in Special:PageTranslation */
+/* Tweak background color of "New Translations" in Special:PageTranslation
 .mw-tpt-sp-section-type-new {
   background-color: var(--background-color-success-subtle);
 }
 .diff-contentalign-left {
-  border: 2px solid green !important;
-}
+  border: 2px solid var(--background-color-content-added) !important;
+} */
 
 /* RECENT CHANGES */
 /* Highlight RC in sidebar 'cos wikis keep moving it */
