--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.72
+@version     1.1.73
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/quiddity.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -547,4 +547,16 @@ html.skin-theme-clientpref-os .cdx-radio:has(label[for="skin-client-pref-skin-th
 /* fix inline diffs not scaling with text-size options */
 .diff-addedline, .diff-deletedline, .diff-context, .mw-diff-inline-added, .mw-diff-inline-deleted, .mw-diff-inline-moved, .mw-diff-inline-changed, .mw-diff-inline-context {font-size: unset}
 
+/* add gap above categories box */
+#catlinks {margin-top: 50px;}
+
+/* list cats */
+.catlinks li {display: block}
+
+/* bold catbox heading */
+#mw-normal-catlinks > a:first-of-type {font-size: 110% }
+
+/* mute hidden cats */
+#mw-hidden-catlinks {opacity: 60%}
+ 
 }
