--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.74
+@version     1.1.75
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/quiddity.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -94,10 +94,12 @@ span.ais523hmn {
 }
 html.skin-theme-clientpref-night span.ais523hmn {
   background-color: #453217 !important;
+    color: var(--color-progressive,#36c) !important;
 }
 @media screen and (prefers-color-scheme: dark) {
   html.skin-theme-clientpref-os span.ais523hmn {
     background-color: #453217 !important;
+    color: var(--color-progressive,#36c) !important;
   }
 }
 /* Opacity in RC/Watchlist for users with 500+ edits */
