--- a/shorter-tab-names.user.css
+++ b/shorter-tab-names.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        WM shorter-tab-names 
 @namespace   StylishThemes
-@version     1.1.3
+@version     1.1.4
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/shorter-tab-names.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/shorter-tab-names.user.css
 @license     CC-BY-SA-4.0
@@ -40,9 +40,9 @@ domain("patchdemo.wmflabs.org") {
 }
 #ca-viewsource > a::after {
   content: 'View-Source';
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   visibility: visible;
-  margin-top: -9px;
+  margin-top: -11px;
 }
 
 #ca-ve-edit > a {
@@ -50,9 +50,9 @@ domain("patchdemo.wmflabs.org") {
 }
 #ca-ve-edit > a::after {
   content: 'Edit';
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   visibility: visible;
-  margin-top: -9px;
+  margin-top: -11px;
 }
   
 #ca-edit > a {
@@ -60,9 +60,9 @@ domain("patchdemo.wmflabs.org") {
 }
 #ca-edit > a::after {
   content: 'Edit source';
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   visibility: visible;
-  margin-top: -9px;
+  margin-top: -11px;
 }
   
 #ca-history > a {
@@ -70,9 +70,9 @@ domain("patchdemo.wmflabs.org") {
 }
 #ca-history > a::after {
   content: 'History';
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   visibility: visible;
-  margin-top: -9px;
+  margin-top: -11px;
 }
 
 #ca-nearby > a {
@@ -80,9 +80,9 @@ domain("patchdemo.wmflabs.org") {
 }
 #ca-nearby > a::after {
   content: 'Nearby';
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   visibility: visible;
-  margin-top: -9px;
+  margin-top: -11px;
 }
 
 }
@@ -126,7 +126,7 @@ domain("patchdemo.wmflabs.org") {
   margin-top: -6px;
 }
 
-/* Main page tabs */
+/* Main page tabs
 #ca-nstab > a,
 #ca-nstab-main > a,
 #ca-nstab-user > a,
@@ -152,19 +152,19 @@ domain("patchdemo.wmflabs.org") {
 #ca-nstab-category > a::after,
 #ca-nstab-manual > a::after {
   content: 'Page';
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   visibility: visible;
-  margin-top: -9px;
-}
+  margin-top: -11px;
+} */
 
 #ca-talk > a {
   font-size: 0px;
 }
 #ca-talk > a::after {
   content: 'Talk';
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   visibility: visible;
-  margin-top: -9px;
+  margin-top: -11px;
 }
 
 }
