--- a/diff-color.user.css
+++ b/diff-color.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        WM diff color (red/green)
 @namespace   StylishThemes
-@version     1.1.16
+@version     1.1.17
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color.user.css
 @license     CC-BY-SA-4.0
@@ -140,6 +140,9 @@ html.skin-theme-clientpref-night .ve-ui-diffElement-attributeChange del {
 .mw-diff-inline-deleted del, .mw-diff-inline-changed del, .mw-diff-inline-moved del {
   text-decoration: line-through;
   text-decoration-color: var(--color-subtle);
+}
+[data-diff-action="remove"] {
+  text-decoration: unset;
 }
 
 /* Bold and gap for changed & added content */
