--- a/diff-color2.user.css
+++ b/diff-color2.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        WM diff color2 (yellow/blue)
 @namespace   StylishThemes
-@version     1.1.11
+@version     1.1.12
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color2.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color2.user.css
 @license     CC-BY-SA-4.0
@@ -120,6 +120,9 @@ html.skin-theme-clientpref-night del.popupDiff {
 .mw-diff-inline-deleted del, .mw-diff-inline-changed del, .mw-diff-inline-moved del { 
   text-decoration: line-through;
   text-decoration-color: var(--color-subtle);
+}
+[data-diff-action="remove"] {
+  text-decoration: unset;
 }
 
 .mw-diff-inline-added ins, .mw-diff-inline-changed ins, .mw-diff-inline-moved ins {
