--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.83
+@version     1.1.84
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/quiddity.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -606,5 +606,11 @@ html.skin-theme-clientpref-os .cdx-radio:has(label[for="skin-client-pref-skin-th
   padding-right: 5px;
 }
 
+/* Bigger edit-box text */
+#wpTextbox1 {font-size: 1.0em}
+.cm-line {font-size: 1.1em}
+	
+/* Hide code-folding */
+.cm-tooltip-fold {display: none}
 
 }
