shorter search bar at thin viewport widths

--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.79
+@version     1.0.80
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/new-vector-enhanced.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -1205,6 +1205,12 @@ background: unset
   #vector-user-links-dropdown-label {
     margin: 0 4px 0 0
   }
+}
+
+/* shorter search bar at thin viewport widths - otherwise it linewraps oddly */
+@media screen and (max-width: 723px) {
+  #searchform{
+    max-width:32vw}
 }
 
 /* top page-name and language sticky
